--- a/Interface/MS.ui
+++ b/Interface/MS.ui
@@ -57,7 +57,7 @@
   <widget class="QPushButton" name="ULDMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>80</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -65,6 +65,19 @@
    </property>
    <property name="text">
     <string>ULD舱单</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="DSMnfstBtn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>DS舱单</string>
    </property>
   </widget>
  </widget>
