--- a/Interface/MS.ui
+++ b/Interface/MS.ui
@@ -57,8 +57,8 @@
   <widget class="QPushButton" name="ULDMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>80</y>
+     <x>10</x>
+     <y>120</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -70,7 +70,7 @@
   <widget class="QPushButton" name="DSMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>150</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -78,6 +78,32 @@
    </property>
    <property name="text">
     <string>DS舱单</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ULD951Btn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ULD951</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="LWS952Btn">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>80</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>LWS952</string>
    </property>
   </widget>
  </widget>
