--- a/Interface/MS.ui
+++ b/Interface/MS.ui
@@ -57,8 +57,8 @@
   <widget class="QPushButton" name="ULDMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>120</y>
+     <x>150</x>
+     <y>80</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -70,8 +70,8 @@
   <widget class="QPushButton" name="DSMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>80</y>
+     <x>80</x>
+     <y>120</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -104,6 +104,19 @@
    </property>
    <property name="text">
     <string>LWS952</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="UCM951Btn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>120</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>UCM951</string>
    </property>
   </widget>
  </widget>
