--- a/Interface/MS.ui
+++ b/Interface/MS.ui
@@ -57,8 +57,8 @@
   <widget class="QPushButton" name="ULDMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>80</y>
+     <x>10</x>
+     <y>120</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -70,8 +70,8 @@
   <widget class="QPushButton" name="DSMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>120</y>
+     <x>150</x>
+     <y>160</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -83,7 +83,7 @@
   <widget class="QPushButton" name="ULD951Btn">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>80</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -96,7 +96,7 @@
   <widget class="QPushButton" name="LWS952Btn">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>150</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -109,7 +109,7 @@
   <widget class="QPushButton" name="UCM951Btn">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>80</x>
      <y>120</y>
      <width>61</width>
      <height>31</height>
@@ -117,6 +117,58 @@
    </property>
    <property name="text">
     <string>UCM951</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ULD952Btn">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>120</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ULD952</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="SCM1Btn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>160</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>SCM1</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="SCM2Btn">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>160</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>SCM2</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="MnfstBtn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>80</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>舱单</string>
    </property>
   </widget>
  </widget>
