--- a/Interface/MS.ui
+++ b/Interface/MS.ui
@@ -67,17 +67,17 @@
     <string>ULD舱单</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="DSMnfstBtn">
+  <widget class="QPushButton" name="RentalMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>10</x>
      <y>160</y>
      <width>61</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>DS舱单</string>
+    <string>租板舱单</string>
    </property>
   </widget>
   <widget class="QPushButton" name="ULD951Btn">
@@ -135,7 +135,7 @@
   <widget class="QPushButton" name="SCM1Btn">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>80</x>
      <y>160</y>
      <width>61</width>
      <height>31</height>
@@ -148,7 +148,7 @@
   <widget class="QPushButton" name="SCM2Btn">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>150</x>
      <y>160</y>
      <width>61</width>
      <height>31</height>
