--- a/Interface/MS.ui
+++ b/Interface/MS.ui
@@ -158,7 +158,7 @@
     <string>SCM2</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="MnfstBtn">
+  <widget class="QPushButton" name="PRELOADBtn">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -168,7 +168,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>舱单</string>
+    <string>PRELOAD</string>
    </property>
   </widget>
  </widget>
