--- a/Interface/MS.ui
+++ b/Interface/MS.ui
@@ -70,7 +70,7 @@
   <widget class="QPushButton" name="RentalMnfstBtn">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>80</x>
      <y>160</y>
      <width>61</width>
      <height>31</height>
@@ -135,7 +135,7 @@
   <widget class="QPushButton" name="SCM1Btn">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>150</x>
      <y>160</y>
      <width>61</width>
      <height>31</height>
@@ -148,8 +148,8 @@
   <widget class="QPushButton" name="SCM2Btn">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>160</y>
+     <x>10</x>
+     <y>200</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -169,6 +169,19 @@
    </property>
    <property name="text">
     <string>PRELOAD</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="AKE952Btn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>160</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>AKE952</string>
    </property>
   </widget>
  </widget>
